--- a/public/popup.html
+++ b/public/popup.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Getting Started Extension's Popup</title>
+    <title>Grab WhatsApp groups links</title>
     <link rel="stylesheet" href="fictoan.min.css">
+    <style>
+      html,
+      body {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
