--- a/public/popup.html
+++ b/public/popup.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Grab WhatsApp groups links</title>
     <link rel="stylesheet" href="fictoan.min.css">
     <style>
       html,
       body {
         display: block;
+        height: 600px;
       }
     </style>
   </head>
   <body>
     <div id="root"></div>
-    <script src="js/vendor.js"></script>
+    <script src="js/vendors.js"></script>
     <script src="js/popup.js"></script>
   </body>
 </html>
