--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="fictoan.min.css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="fictoan.min.css" />
     <style>
       html,
       body {
@@ -13,7 +13,5 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="js/vendors.js"></script>
-    <script src="js/popup.js"></script>
   </body>
 </html>
